--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -8,19 +8,24 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+   
     <div class="header">
+      <div class="left-container">
       <div class="logo">
         LOGO
-      </div>
+      </div>      
       <ul class="links">
         <li><a href="google.com">link-one</a></li>
         <li><a href="google.com">link-two</a></li>
         <li><a href="google.com">link-three</a></li>
       </ul>
+    </div>
+      <div class="right-container">
       <button class="notifications">
         1 new notification
       </button>
       <div class="profile-image"></div>
+    </div>
     </div>
   </body>
 </html>
